--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,10 @@ section { margin-bottom: 50px; }
 
 .filter a { padding-right: 10px; }
 .filter { margin-bottom: 20px; }
+
+.flash {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 20px 40px;
+}
